hphp/hack/test/typecheck/readonly/await.php.exp
File "await.php", line 23, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
